--- a/apps/notanapp.yaml
+++ b/apps/notanapp.yaml
@@ -2,18 +2,18 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: dummy
+  name: notanapp
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: dummy
-  namespace: dummy
+  name: notanapp
+  namespace: notanapp
 spec:
   interval: 10m
   chart:
     spec:
-      chart: ./charts/dummy
+      chart: ./charts/webservice
       sourceRef:
         kind: GitRepository
         name: flux-system
