--- a/charts/webservice/templates/service.yaml
+++ b/charts/webservice/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "dummy.fullname" . }}
+  name: {{ include "webservice.fullname" . }}
   labels:
-    {{- include "dummy.labels" . | nindent 4 }}
+    {{- include "webservice.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
     protocol: TCP
     name: http
   selector:
-    {{- include "dummy.selectorLabels" . | nindent 4 }}
+    {{- include "webservice.selectorLabels" . | nindent 4 }}
