--- a/apps/potato.yaml
+++ b/apps/potato.yaml
@@ -14,6 +14,7 @@ spec:
   chart:
     spec:
       chart: ./charts/webservice
+      reconcileStrategy: Revision
       sourceRef:
         kind: GitRepository
         name: flux-system
@@ -27,8 +28,13 @@ spec:
       pullPolicy: Always
     containerPort: 8080
     service:
-      type: LoadBalancer
+      type: ClusterIP
       port: 50000
+    ingress:
+      enabled: true
+      host: potato.local
+      tls:
+        enabled: true
     resources:
       limits:
         cpu: 100m
