loki grafana ds

--- a/apps/monitoring.yaml
+++ b/apps/monitoring.yaml
@@ -39,6 +39,13 @@ spec:
         enabled: true
         type: ClusterIP
         port: 3000
+      additionalDataSources:
+        - name: Loki
+          type: loki
+          access: proxy
+          url: http://loki-loki-distributed-gateway.monitoring.svc.cluster.local:80
+          isDefault: false
+          editable: true
     prometheus:
       prometheusSpec:
         retention: 15d
