--- a/apps/monitoring.yaml
+++ b/apps/monitoring.yaml
@@ -115,4 +115,33 @@ spec:
       requests:
         cpu: 500m
         memory: 1Gi
-  
+
+# Promtail
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: promtail
+  namespace: monitoring
+spec:
+  interval: 10m
+  chart:
+    spec:
+      chart: promtail
+      version: "6.17.1"
+      sourceRef:
+        kind: HelmRepository
+        name: grafana
+        namespace: monitoring
+      interval: 12h
+  values:
+    config:
+      clients:
+        - url: http://loki-loki-distributed-gateway.monitoring.svc.cluster.local:80/loki/api/v1/push
+    resources:
+      limits:
+        cpu: 200m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 64Mi
