--- a/apps/starlink-monitor.yaml
+++ b/apps/starlink-monitor.yaml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: starlink-monitor
+  name: starlink
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: starlink-monitor
-  namespace: starlink-monitor
+  namespace: starlink
 spec:
   interval: 10m
   chart:
@@ -72,7 +72,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: starlink-monitor
-  namespace: starlink-monitor
+  namespace: starlink
   labels:
     app.kubernetes.io/name: starlink-monitor
 spec:
@@ -80,6 +80,9 @@ spec:
     matchLabels:
       app.kubernetes.io/name: internal
       app.kubernetes.io/instance: starlink-monitor
+  namespaceSelector:
+    matchNames:
+      - starlink
   endpoints:
   - port: http
     path: /metrics
