--- a/apps/monitoring.yaml
+++ b/apps/monitoring.yaml
@@ -122,28 +122,87 @@ spec:
         size: 10Gi
         storageClass: local-path
 
-# Promtail
+# Fluent Bit
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: fluent
+  namespace: monitoring
+spec:
+  interval: 24h
+  url: https://fluent.github.io/helm-charts
 ---
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: promtail
+  name: fluent-bit
   namespace: monitoring
 spec:
   interval: 10m
   chart:
     spec:
-      chart: promtail
-      version: "6.17.1"
+      chart: fluent-bit
+      version: "0.54.0"
       sourceRef:
         kind: HelmRepository
-        name: grafana
+        name: fluent
         namespace: monitoring
       interval: 12h
   values:
     config:
-      clients:
-        - url: http://loki-loki-distributed-gateway.monitoring.svc.cluster.local:80/loki/api/v1/push
+      service: |
+        [SERVICE]
+            Daemon Off
+            Flush 1
+            Log_Level info
+            Parsers_File /fluent-bit/etc/parsers.conf
+            Parsers_File /fluent-bit/etc/conf/custom_parsers.conf
+            HTTP_Server On
+            HTTP_Listen 0.0.0.0
+            HTTP_Port 2020
+            Health_Check On
+
+      inputs: |
+        [INPUT]
+            Name tail
+            Path /var/log/containers/*_starlink_*.log
+            multiline.parser docker, cri
+            Tag kube.*
+            Mem_Buf_Limit 5MB
+            Skip_Long_Lines On
+
+      filters: |
+        [FILTER]
+            Name kubernetes
+            Match kube.*
+            Kube_URL https://kubernetes.default.svc:443
+            Kube_CA_File /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+            Kube_Token_File /var/run/secrets/kubernetes.io/serviceaccount/token
+            Kube_Tag_Prefix kube.var.log.containers.
+            Merge_Log On
+            Keep_Log Off
+            K8S-Logging.Parser On
+            K8S-Logging.Exclude On
+            Labels On
+            Annotations Off
+
+        [FILTER]
+            Name grep
+            Match kube.*
+            Regex $kubernetes['namespace_name'] ^starlink$
+
+      outputs: |
+        [OUTPUT]
+            Name loki
+            Match kube.*
+            Host loki-loki-distributed-gateway.monitoring.svc.cluster.local
+            Port 80
+            Labels job=fluent-bit
+            Label_keys $kubernetes['namespace_name'],$kubernetes['pod_name'],$kubernetes['container_name'],$kubernetes['labels']['app']
+            Remove_keys kubernetes,stream
+            Auto_kubernetes_labels On
+
     resources:
       limits:
         cpu: 200m
@@ -151,3 +210,10 @@ spec:
       requests:
         cpu: 100m
         memory: 64Mi
+
+    tolerations:
+      - effect: NoSchedule
+        operator: Exists
+
+    serviceMonitor:
+      enabled: false
